@@ -1,1 +1,1 @@
-0.23.1
+0.23.2
